# identsaw

./: .gitignore  README.md  pyproject.toml
examples/idp_demo/: serve.py
src/identsaw/: __init__.py  _util.py  auth.py  idp.py  jwt.py  magiclink.py  methods.py  otp.py  passkey.py  providers.py
src/identsaw/stores/: __init__.py
tests/: test_auth.py  test_idp.py  test_magiclink.py  test_otp.py  test_passkey.py  test_providers.py  test_saml.py
