[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "identsaw"
version = "0.1.0"
description = "A reusable identity module — local accounts, JWT sessions/tokens, and pluggable OAuth2/OIDC login behind an abstract user store. Standalone, or the auth layer under guardsaw."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "KellerKev", email = "kellerkev@gmail.com" }]
keywords = ["auth", "identity", "oauth2", "oidc", "jwt", "passwordless", "sqladal", "websaw"]
dependencies = []                                 # core is stdlib-only (HS256 JWT included)

[project.urls]
Homepage = "https://github.com/KellerKev/identsaw"
Repository = "https://github.com/KellerKev/identsaw"

[project.optional-dependencies]
sqladal = ["sqladal>=0.7"]                        # the SqladalUserStore + install_identity_models
oidc = ["httpx>=0.27", "pyjwt[crypto]>=2.8"]      # OAuth2 / OIDC providers + the IdP (RS256)
passkey = ["webauthn>=2"]                         # WebAuthn / passkeys
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/identsaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = "3.13.*"
pytest = ">=8"
pip = "*"
uvicorn = ">=0.29"       # examples/idp_demo serves under the ombott fork's ASGI server
websockets = ">=12"

[tool.pixi.pypi-dependencies]
identsaw = { path = ".", editable = true }
sqladal = { path = "../sqladal", editable = true }
ombott-ng = { path = "../ombott", editable = true }        # for the IdP mount test
httpx = ">=0.27"
pyjwt = { version = ">=2.8", extras = ["crypto"] }
webauthn = ">=2"                                         # passkey tests

[tool.pixi.tasks]
test = "pytest -q"
